<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MobileVerifyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/enter_your_n_mobile_number"
            android:textColor="#0865A4"
            android:textSize="25dp"
            android:fontFamily="@font/robotobold"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/we_will_send_confirmation_code"
            android:fontFamily="@font/robotomedium"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bordershape"
        android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/phone"
                android:layout_width="25dp"
                android:layout_height="20sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20sp"
                android:src="@drawable/call"
                app:tint="@color/purple_200" />


            <EditText
                android:id="@+id/et_verify"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toRightOf="@+id/phone"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:hint="+911234567890"
                android:background="@null"
                android:fontFamily="@font/robotoregular"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"
                android:textSize="15sp" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/text"
            android:layout_height="60dp"
            android:fontFamily="@font/robotomedium"
            android:backgroundTint="#0865A4"
            app:cornerRadius="10dp"
            android:layout_centerInParent="true"
            android:text="@string/next"
            android:id="@+id/btnNext">
        </com.google.android.material.button.MaterialButton>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/rlLogin"
            android:layout_below="@+id/btnNext"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtAlready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/already_ac"
                android:fontFamily="@font/robotobold"
                android:textSize="13sp" />



        </RelativeLayout>




    </RelativeLayout>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="250dp"
        android:text="@string/connect_with_google"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"

        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:layout_height="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/relGoogle"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="20dp"
                android:id="@+id/ivGoogle"
                android:layout_centerVertical="true"
                android:src="@drawable/google"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_toRightOf="@+id/ivGoogle"
                android:id="@+id/txGoogle"
                android:layout_marginLeft="5dp"
                android:text="@string/connect_with_google"
                android:fontFamily="@font/robotobold"
                android:textColor="@color/black"
                android:textSize="13sp" />



        </RelativeLayout>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />


    </com.google.android.material.card.MaterialCardView>




</LinearLayout>