<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.PasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:fontFamily="@font/robotobold"
            android:text="@string/enter_your_n_your_password"
            android:textColor="#0865A4"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/we_will_send_confirmation_password"

            android:fontFamily="@font/robotomedium"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <TextView
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/robotomedium"
            android:text="@string/password"

            android:textSize="17sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxStrokeWidth="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:boxStrokeWidthFocused="0dp"
            style="@style/myTextInputLabel"
            android:layout_below="@+id/txt_password"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:fontFamily="@font/robotoregular"
                android:hint="@string/password"
                android:singleLine="true"
                android:maxLength="50"
                android:layout_marginTop="10dp"
                android:id="@+id/etPass" />

        </com.google.android.material.textfield.TextInputLayout>





    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/txt_Confirmpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/robotomedium"
            android:text="@string/confirm_password"
            android:textSize="17sp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/txt_Confirmpassword"
            app:passwordToggleEnabled="true"
            style="@style/myTextInputLabel"
            android:backgroundTint="@color/blue"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/confirm_password"
                android:maxLength="50"
                android:fontFamily="@font/robotoregular"
                android:inputType="textPassword"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>





        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/txt_Confirmpassword"
            android:layout_margin="10dp"
            android:background="@drawable/shape_border"
            android:hint="*********"
            android:visibility="gone"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:singleLine="true" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_below="@+id/txt_Confirmpassword"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="23dp"
            android:visibility="gone"
            android:layout_marginRight="20dp"
            android:src="@drawable/view" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_below="@+id/text"
            android:layout_centerInParent="true"
            android:layout_marginTop="20sp"
            android:backgroundTint="#0865A4"
            android:text="@string/next"
            android:fontFamily="@font/robotomedium"
            app:cornerRadius="10dp">

        </com.google.android.material.button.MaterialButton>
    </RelativeLayout>
</LinearLayout>